--- a/src/main/resources/templates/bookupdate-form.html
+++ b/src/main/resources/templates/bookupdate-form.html
@@ -40,6 +40,9 @@
 
         <input type="text" th:field="*{isbn}"
                class="form-control mb-4 col-4" placeholder="ISBN">
+               
+       <input type="text" th:field="*{quantity}"
+               class="form-control mb-4 col-4" placeholder="QUANTITY">
               
        
        <select name="authorId" class="form-control mb-4 col-4" >
