--- a/src/main/resources/templates/publisher-form.html
+++ b/src/main/resources/templates/publisher-form.html
@@ -25,21 +25,25 @@
 <div th:insert="fragments/header :: header"></div>
 <div class="container">
 
-    <h3 style="color:red;">Publisher Directory</h3>
+    <h3>Publisher Directory</h3>
     <hr>
 
-    <p class="h4 mb-4" style="color:red;">Save Publisher</p>
+    <p class="h4 mb-4">Save Publisher</p>
 
     <form action="#" th:action="@{/publisher/save}"
           th:object="${publishers}" method="POST">
-
+        <div>
         <input type="hidden" th:field="*{id}" />
+        </div>
 
+        <div>
         <input type="text" th:field="*{publisher_name}"
                class="form-control mb-4 col-4" placeholder="Publisher name">
-
+        <p style="color:red;" th:if="${#fields.hasErrors('publisher_name')}" th:errorclass="error" th:errors="*{publisher_name}"></p>
+        </div>
+        <div>
         <textarea rows="4" cols="50" class="form-control mb-4 col-4" placeholder="Description" th:field="*{description}"></textarea>
-
+      </div>
        <div><button type="submit" class="btn btn-info col-2">Save</button></div> 
     </form>
     <hr>
