--- a/src/main/resources/templates/list-books.html
+++ b/src/main/resources/templates/list-books.html
@@ -20,6 +20,7 @@
      
 </head>
 <body>
+
 <div th:insert="fragments/header :: header"></div>
 <div class="container">
     <h3 style="color:red;">BOOKS LIST</h3>
@@ -43,7 +44,10 @@
         </div>
     </form>
         <hr>
+        
         <div class="table-responsive-sm">
+        <div th:if="${quantityzero}" class="alert alert-danger">[[${quantityzero}]]<br></div>
+        <div th:if="${success}" class="alert alert-success">[[${success}]]<br></div>
         <table class="table table-bordered table-striped">
             <thead class="thead-dark">
             <tr>
@@ -74,7 +78,7 @@
                 <td th:text="${tempBook.publisher.publisher_name}" ></td>
                 <td>
                      <div sec:authorize="hasRole('USER')">
-                        <a th:href="@{/books/showFormForUpdate(bookId=${tempBook.id})}"
+                        <a th:href="@{/books/borrow(bookId=${tempBook.id})}"
                            class="btn btn-info btn-sm mb-1">
                             Borrow
                         </a>
@@ -90,7 +94,7 @@
                     <!-- Add "delete" button/link -->
                      <div sec:authorize="hasRole('ADMIN')"> 
                         <a th:href="@{/books/delete(bookId=${tempBook.id})}"
-                           class="btn btn-danger btn-sm"
+                           class="btn btn-danger btn-sm mb-1"
                            onclick="if (!(confirm('Are you sure you want to delete this book?'))) return false">
                             Delete
                         </a>
