--- a/src/main/resources/templates/list-publishers.html
+++ b/src/main/resources/templates/list-publishers.html
@@ -54,14 +54,14 @@
                 <div sec:authorize="hasRole('ADMIN')"
                 <!-- Add "update" button/link -->
                 <a th:href="@{/publisher/showFormForUpdate(publisherId=${tempPublisher.id})}"
-                   class="btn btn-info btn-sm">
+                   class="btn btn-info btn-sm mb-1">
                     Update
                 </a>
                 </div>
                 <div sec:authorize="hasRole('ADMIN')">
                 <!-- Add "delete" button/link -->
                 <a th:href="@{/publisher/delete(publisherId=${tempPublisher.id})}"
-                   class="btn btn-danger btn-sm"
+                   class="btn btn-danger btn-sm mb-1"
                    onclick="if (!(confirm('Are you sure you want to delete this publisher?'))) return false">
                     Delete
                 </a>
